fix dropdown clipping

--- a/feedi/static/css/main.css
+++ b/feedi/static/css/main.css
@@ -32,7 +32,7 @@
 }
 
 .column {
-    overflow: clip!important;
+    overflow-x: clip!important;
 }
 
 .feed-header {
